@@ -51,6 +51,11 @@
 #define TCL_STORAGE_CLASS DLLEXPORT
 #endif /* BUILD_udp */
 
+/* Windows doesn't declare SOL_IP. It uses this instead... */
+#ifndef SOL_IP
+#define SOL_IP IPPROTO_IP
+#endif /* SOL_IP */
+
 #ifdef WIN32
 
 typedef u_short uint16_t;
